<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iRemember</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="key_id">Key_ID</string>
    <string name="story_name">Story Name</string>
    <string name="story_time">Story Time</string>
    <string name="button_add">ADD</string>
    <string name="storytitle">Title</string>
    <string name="storybody">Body</string>
    <string name="Storyaudio">Audio Link</string>
    <string name="storyvideo">Video Link</string>
    <string name="storyimage">ImageName</string>
    <string name="storyimagelink">Image Link</string>
    <string name="storytime">Story time</string>
    <string name="storylocation">Get Location</string>
    <string name="storylongitude">Longitude</string>
    <string name="storylatitude">Latitude</string>
    <string name="audio_button">Add Audio</string>
    <string name="video_button">Add Video</string>
    <string name="photo_button">Add Photo</string>
    <string name="settime">Click text to set time</string>
    <string name="locationbutton">Get Location</string>
    <string name="cancelbutton">Cancel</string>
    <string name="resetbutton">Reset</string>
    <string name="createbutton">Create</string>
    <string name="record_button">Start Recording</string>
    <string name="play_button">Start Playing</string>
    <string name="title_activity_audiorec_activity">Audiorec_activity</string>
    <string name="title_activity_story_view">Story_view</string>
    <string name="play_audio">Play Audio</string>
    <string name="view_audio">Audio</string>
    <string name="view_video">Video</string>
    <string name="view_photo">Image</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="search_hint">Enter Text</string>
    <string name="title_activity_edit_story">Edit_story</string>
    <string name="save_button">Save</string>
    <string name="edit_location">Location</string>

</resources>