<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/story_key"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:text="@string/key_id" 
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/story_name"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/story_name"
        android:layout_marginLeft="20dp" 
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/story_time"
        android:layout_marginLeft="20dp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/story_time" 
        android:textSize="14sp"/>

</LinearLayout>